BLog: polish appendo
Signed-off-by: Kakadu <Kakadu@pm.me>

--- a/_posts/2021-11-15-appendo.md
+++ b/_posts/2021-11-15-appendo.md
@@ -24,7 +24,7 @@ let rec appendo xs ys xys =
       ])
 ```
 
-Relations in OCanren are mapped to plain OCaml functions of a specific type (it’s not important for now which exactly). Therefore recursive relations are defined as recursive OCaml functions. In a body of a relation we could meet a disjunction of multiple arity (called conde); conjunction compinator called &&& (which is in a theory “fair”), unification and creation of `fresh` logic variables with a macro ‘fresh’. In the example above the macro fresh (h tl xytl)  creates three logic variables (h, tl and xytl). Also it inserts a lazy delay, which is required because all the combinators and all the  functions are evaluated with call-by-value strategy.
+Relations in OCanren are mapped to plain OCaml functions of a specific type (it’s not important for now which exactly). Therefore recursive relations are defined as recursive OCaml functions. In a body of a relation we could meet a disjunction of multiple arity (called `conde`); conjunction compinator called &&& (which is in a theory “fair”), unification and creation of `fresh` logic variables with a macro ‘fresh’. In the example above the macro `fresh (h tl xytl)` creates three logic variables (h, tl and xytl). Also it inserts a lazy delay, which is required because all the combinators and all the  functions are evaluated with call-by-value strategy.
 
 The relation `appendo` takes two logical lists and associates them (or simply ‘returns’) a list which is concatenation of two. The implementation above is canonical, it doesn’t have much space to vary. The implementation of ‘reverso’ relation, which reverses order of elements in the input list, is more complicated.
 
@@ -34,8 +34,8 @@ let rec reverso xs ys =
    (conde
       [ xs === Std.nil () &&& (xs === ys)
       ; (xs === List.cons h tl) &&&
-  (reverso tl temp) &&&
-  (appendo temp (List.singleton h) ys)
+        (reverso tl temp) &&&
+        (appendo temp (List.singleton h) ys)
       ])
 ```
 
@@ -44,58 +44,60 @@ When ‘reverso’ takes a non-empty list, it splits it to head and tail, revers
 Let’s try to run relations defined above. The appendo relation we can easily turn to inverse algorithms, and, for example, generate all pairs of lists, which concatenation is `[1;2;3]`
 
 ```
- fun q r -> appendo xs ys (Std.list (!!) [1; 2; 3]), all answers {
- q=[]; r=[1; 2; 3];
- q=[1]; r=[2; 3];
- q=[1; 2]; r=[3];
- q=[1; 2; 3]; r=[];
- }
+fun q r -> appendo xs ys (Std.list (!!) [1; 2; 3]), all answers {
+q=[]; r=[1; 2; 3];
+q=[1]; r=[2; 3];
+q=[1; 2]; r=[3];
+q=[1; 2; 3]; r=[];
+}
 ```
 
 We can easily call reverso relation in forward direction trying to get first and all answers:
 
 ```
- fun xs -> reverso (Std.list (!!) [1; 2; 3]) xs, 1 answer {
- q=[3; 2; 1];
- }
- fun xs -> reverso (Std.list (!!) [1; 2; 3]) xs, all answers {
- q=[3; 2; 1];
- }
+fun xs -> reverso (Std.list (!!) [1; 2; 3]) xs, 1 answer {
+q=[3; 2; 1];
+}
+fun xs -> reverso (Std.list (!!) [1; 2; 3]) xs, all answers {
+q=[3; 2; 1];
+}
 ```
 
 And we could try to call reverso relation in the inverse direction, trying to get first and all answer:
 
 ```
- fun xs -> reverso xs (Std.list (!!) [1; 2; 3]), 1 answer {
- q=[3; 2; 1];
- }
- fun xs -> reverso xs (Std.list (!!) [1; 2; 3]), all answers {
- q=[3; 2; 1];
- <HANGS>
+fun xs -> reverso xs (Std.list (!!) [1; 2; 3]), 1 answer {
+q=[3; 2; 1];
+}
+fun xs -> reverso xs (Std.list (!!) [1; 2; 3]), all answers {
+q=[3; 2; 1];
+<HANGS>
 ```
 
-Yikes. Getting the first answer works as expected, but getting all answers diverges after getting the first answer. miniKanren can’t understand that no more answer could be generated when the first argument of relation is a free variable, and the second argument is a ground logic list representing `[1;2;3]`. It happens because in the implementation of  ‘reverso’ we are calling reverso before the appendo. For our input, it splits a free variable (the first argument) into head and tail and tries to get all possible ways to reverse a free variable before calling ‘appendo’. The educated guess says that if the call of appendo goes before the call of reverso it will help our situation. Let’s try another implementation of ‘reverso’.
+Yikes. Getting the first answer works as expected, but getting all answers diverges after getting the first answer. miniKanren can’t understand that no more answer could be generated when the first argument of relation is a free variable, and the second argument is a ground logic list representing `[1;2;3]`. It happens because in the implementation of  ‘reverso’ we are calling reverso before the appendo. For our input, it splits a free variable (the first argument) into head and tail and tries to get all possible ways to reverse a free variable before calling ‘appendo’.
+
+The educated guess says that if the call of appendo goes before the call of reverso it will help our situation. Let’s try another implementation of ‘reverso’.
 
 ```
 let rec reverso xs ys =
- fresh (h tl)
-   (conde
+  fresh (h tl)
+    (conde
       [ xs === Std.nil () &&& (xs === ys)
       ; (xs === List.cons h tl) &&&
-  (appendo temp (List.singleton h) ys) &&&
-  (reverso tl temp)
+        (appendo temp (List.singleton h) ys) &&&
+        (reverso tl temp)
       ])
 ```
 
 Now execution in the inverse direction is fine:
 
 ```
- fun xs -> reverso xs (Std.list (!!) [1; 2; 3]), 1 answer {
- q=[3; 2; 1];
- }
- fun xs -> reverso xs (Std.list (!!) [1; 2; 3]), all answers {
- q=[3; 2; 1];
- }
+fun xs -> reverso xs (Std.list (!!) [1; 2; 3]), 1 answer {
+q=[3; 2; 1];
+}
+fun xs -> reverso xs (Std.list (!!) [1; 2; 3]), all answers {
+q=[3; 2; 1];
+}
 ```
 
 But execution in normal direction is broken now:
